--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asttokens==2.4.1
 brambox==5.0.0
 comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
 debugpy==1.8.7
 decorator==5.1.1
+exceptiongroup==1.2.2
 executing==2.1.0
 filelock==3.16.1
+fonttools==4.54.1
 fsspec==2024.10.0
 ipykernel==6.29.5
 ipython==8.28.0
@@ -12,8 +16,10 @@ jedi==0.19.1
 Jinja2==3.1.4
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.7
 lightnet==4.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 nest-asyncio==1.6.0
@@ -31,6 +37,7 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -42,11 +49,11 @@ psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.18.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 scipy==1.14.1
-setuptools==75.2.0
 six==1.16.0
 stack-data==0.6.3
 sympy==1.13.1
