--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 pyzmq==26.2.0
 scipy==1.14.1
 six==1.16.0
