new training methodology

--- a/configs/train_anyv2_wizard.yaml
+++ b/configs/train_anyv2_wizard.yaml
@@ -1,12 +1,19 @@
-dataset_name: "anythingv2"
+dataset_name: "anythingv2_newsplit"
 base_dir: "/home/gkmo/workspace/data"
-train_img_dir: "/image_splits/train/images"
-train_depth_dir: "/Depth_anything_v2/train/depth"
-train_label_dir: "/image_splits/train/labels"
+train_img_dir: "/home/gkmo/workspace/data/new_splits/train/images"
+train_depth_dir: "/home/gkmo/workspace/data/new_anything_split/train"
+train_label_dir: "/home/gkmo/workspace/data/new_splits/train/labels"
+val_img_dir: "/home/gkmo/workspace/data/new_splits/val/images"
+val_depth_dir: "/home/gkmo/workspace/data/new_anything_split/val"
+val_label_dir: "/home/gkmo/workspace/data/new_splits/val/labels"
+test_img_dir: "/home/gkmo/workspace/data/new_splits/test/images"
+test_depth_dir: "/home/gkmo/workspace/data/new_anything_split/test"
+test_label_dir: "/home/gkmo/workspace/data/new_splits/test/labels"
 batch_size: 16
 num_workers: 16
 learning_rate: 0.01
-num_epochs: 500
+num_epochs: 4
 device: "cuda"
 model_type: "rgbd"
 fuse_layer: 15
+val_every: 2
