--- a/configs/train_anyv2_local_pavic.yaml
+++ b/configs/train_anyv2_local_pavic.yaml
@@ -1,11 +1,19 @@
-dataset_name: "anythingv2"
-train_img_dir: "data/image_splits/train/images"
-train_depth_dir: "data/Depth_anything_v2/train/depth"
-train_label_dir: "data/image_splits/train/labels"
-batch_size: 2
-num_workers: 20
+dataset_name: "anythingv2_newsplit"
+base_dir: "/home/gkmo/workspace/data"
+train_img_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/train/images/"
+train_depth_dir: "/home/gustavo/workstation/depth_estimation/data/new_anything_split/train/"
+train_label_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/train/labels/"
+val_img_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/val/images/"
+val_depth_dir: "/home/gustavo/workstation/depth_estimation/data/new_anything_split/val/"
+val_label_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/val/labels/"
+test_img_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/test/images/"
+test_depth_dir: "/home/gustavo/workstation/depth_estimation/data/new_anything_split/test/"
+test_label_dir: "/home/gustavo/workstation/depth_estimation/data/new_splits/test/labels/"
+batch_size: 16
+num_workers: 16
 learning_rate: 0.01
-num_epochs: 20
+num_epochs: 5
 device: "cuda"
 model_type: "rgbd"
 fuse_layer: 15
+val_every: 1
