--- a/configs/train_anyv2_gpu.yaml
+++ b/configs/train_anyv2_gpu.yaml
@@ -12,8 +12,8 @@ test_depth_dir: "/home/escorpiao/workspace/depth-obj-detection/data/new_anything
 batch_size: 16
 num_workers: 16
 learning_rate: 0.01
-num_epochs: 5
+num_epochs: 300
 device: "cuda"
-model_type: "rgbd"
+model_type: "rgb"
 fuse_layer: 15
 val_every: 1
