--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asttokens==2.4.1
 brambox==5.0.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
@@ -10,6 +12,9 @@ executing==2.1.0
 filelock==3.16.1
 fonttools==4.54.1
 fsspec==2024.10.0
+hf-xet==1.1.4
+huggingface-hub==0.33.0
+idna==3.10
 ipykernel==6.29.5
 ipython==8.28.0
 jedi==0.19.1
@@ -54,10 +59,13 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
+requests==2.32.4
+safetensors==0.5.3
 scipy==1.14.1
 six==1.16.0
 stack-data==0.6.3
 sympy==1.13.1
+timm==1.0.15
 torch==2.5.0
 torchaudio==2.5.0
 torchinfo==1.8.0
@@ -68,4 +76,5 @@ traitlets==5.14.3
 triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.4.0
 wcwidth==0.2.13
